--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,8 +7,49 @@
     font-family: 'QuickSand';
 }
 
+/* Sticky-Button */
+.sticker-button {
+  position: fixed;
+  bottom: 25px; /* adjust the distance from the bottom as needed */
+  right: 25px; /* adjust the distance from the right as needed */
+  z-index: 1000; /* ensure the button is above other elements */
+}
+
+
 /* Nav section */
 
+li {
+    font-size: 1.5rem;
+}
+
+
+/* Profile Picture */
+.profile-pic{
+    display: inline-block;
+    vertical-align: middle;
+     width: 40px;
+     height: 40px;
+     overflow: hidden;
+    border-radius: 50%;
+ }
+ 
+ .profile-pic img{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+ }
+ .profile-menu .dropdown-menu {
+   right: 0;
+   left: unset;
+ }
+ .profile-menu .fa-fw {
+   margin-right: 10px;
+ }
+ 
+ .toggle-change::after {
+   border-top: 0;
+   border-bottom: 0.3em solid;
+ }
 
 /* Banner */
 .site-banner {
@@ -19,6 +60,9 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+
+
 
 /* Middle / Main section */
 
