--- a/public/pages/catalog/catalog.css
+++ b/public/pages/catalog/catalog.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'QuickSand';
-    src: url(/assets/Quicksand-Medium.ttf) format('truetype');
+    src: url(/public/assets/Quicksand-Medium.ttf) format('truetype');
 }
 
 * {
@@ -54,7 +54,7 @@ li {
 /* Banner */
 .site-banner {
     display: flex;
-    background-image: url(/images/banner.jpg);
+    background-image: url(/public/images/banner.jpg);
     min-height: 450px;
     background-position: center;
     background-size: cover;
