server/middleware update

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <!--Fontawesome-->
     <script
       src="https://kit.fontawesome.com/ff00a6193a.js"
@@ -28,9 +28,7 @@
     />
     <!--Website logo-->
     <link rel="shortcut icon" type="image/x-icon" href="/images/Logo.png" />
-    <title>About Us</title>
+    <title>Ice Shop</title>
   </head>
   <body>
-    <h1>About Us page</h1>
-  </body>
-</html>
+
