added other pages to server / gave nav, head and footer to other pages

--- a/src/views/partials/button.ejs
+++ b/src/views/partials/button.ejs
@@ -1,3 +1,4 @@
+<!-- Sticky cart page button -->
 <button
   class="btn btn-primary ms-4 shadow sticker-button"
   style="width: 85px; height: 85px"
