--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <!-- Navigation section -->
 <nav class="navbar navbar-expand-lg shadow text-bg-light">
   <div class="container-md">
-    <a href="#" class="navbar-brand ps-4">
+    <a href="/" class="navbar-brand ps-4">
       <img
         src="/images/Logo.png"
         alt="Ice-Dude logo"
@@ -28,11 +28,12 @@
     >
       <ul class="nav">
         <li class="nav-item dropdown">
-          <a class="nav-link" href="#" role="button"> Menu </a>
+          <a class="nav-link" href="/catalog" role="button"> Menu </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="/about">About Us</a>
         </li>
+
         <!-- Profile Picture -->
         <li class="nav-item dropdown ms-3">
           <a
@@ -52,17 +53,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li>
-              <a class="dropdown-item" href="#"
-                ><i class="fas fa-sliders-h fa-fw"></i> Account</a
-              >
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"
-                ><i class="fas fa-cog fa-fw"></i> Settings</a
-              >
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"
+              <a class="dropdown-item" href="/orders"
                 ><i class="fas bi-bag-fill fa-fw"></i> Orders</a
               >
             </li>
