--- a/src/views/partials/button.ejs
+++ b/src/views/partials/button.ejs
@@ -1,7 +1,9 @@
 <!-- Sticky cart page button -->
-<button
-  class="btn btn-primary ms-4 shadow sticker-button"
-  style="width: 85px; height: 85px"
->
-  <i class="bi bi-cart-fill" style="font-size: 2rem"></i>
-</button>
+<a href="/cart">
+  <button
+    class="btn btn-primary ms-4 shadow sticker-button"
+    style="width: 85px; height: 85px"
+  >
+    <i class="bi bi-cart-fill" style="font-size: 2rem"></i>
+  </button>
+</a>
